--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "test:coverage": "ng test --code-coverage",
+    "lint": "ng lint",
+    "e2e": "cypress run",
+    "e2e:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open"
   },
   "private": true,
   "dependencies": {
@@ -47,6 +52,7 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "cypress": "^13.17.0",
     "eslint": "^9.16.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
